tests/ui/misuse.stderr
warning: panic message is not a string literal
   --> src/lib.rs
    |
    |     panic!(AbortNow)
    |     ------ ^^^^^^^^
    |     |
    |     help: use std::panic::panic_any instead: `std::panic::panic_any`
    |
    = note: `#[warn(non_fmt_panics)]` on by default
    = note: this usage of panic!() is deprecated; it will be a hard error in Rust 2021
    = note: for more information, see <https://doc.rust-lang.org/nightly/edition-guide/rust-2021/panic-macro-consistency.html>

error[E0599]: the method `FIRST_ARG_MUST_EITHER_BE_Span_OR_IMPLEMENT_ToTokens_OR_BE_SpanRange` exists for reference `&Foo`, but its trait bounds were not satisfied
  --> tests/ui/misuse.rs:8:5
   |
4  | struct Foo;
   | ----------- doesn't satisfy `Foo: quote::to_tokens::ToTokens`
...
8  |     abort!(Foo, "BOOM");
   |     ^^^^^^^^^^^^^^^^^^^ method cannot be called on `&Foo` due to unsatisfied trait bounds
   |
   = note: the following trait bounds were not satisfied:
           `Foo: quote::to_tokens::ToTokens`
           which is required by `&Foo: ToTokensAsSpanRange`
note: the following trait must be implemented
  --> .cargo/registry/src/github.com-1ecc6299db9ec823/quote-1.0.16/src/to_tokens.rs
   |
   | / pub trait ToTokens {
   | |     /// Write `self` to the given `TokenStream`.
   | |     ///
   | |     /// The token append methods provided by the [`TokenStreamExt`] extension
...  |
   | |     }
   | | }
   | |_^
   = note: this error originates in the macro `$crate::diagnostic` (in Nightly builds, run with -Z macro-backtrace for more info)
